[metadata]
name = BraessTraficSim
version = 0.0.1
license = "GNU General Public License v3.0"
description = "A trafic simulator with focus on Braess's paradox"
long_description = file: README.md
author = Simon Paulsson

[options]
packages = BraessTraficSim
include_package_data = True
install_requires = 
    numpy
    tqdm
    networkx
    matplotlib
    mycolorpy
